--- a/packages/testbed/src/app/ui/pan/pan.component.html
+++ b/packages/testbed/src/app/ui/pan/pan.component.html
@@ -6,7 +6,8 @@
   step="0.00001"
   value="0.5"
   [value]="channel.pan$ | async"
-  #faderLevelInput
+  (change)="channel.setPan(panInput.value)"
+  #panInput
 />
 
 <span class="badge badge-primary ml-3">{{ channel.pan$ | async }}</span>
