feat(testbed): add page for master level, pan and dim

--- a/packages/testbed/src/app/ui/mixer-button/mixer-button.component.scss
+++ b/packages/testbed/src/app/ui/mixer-button/mixer-button.component.scss
@@ -30,4 +30,13 @@ button {
       background: lighten(red, 20%);
     }
   }
+
+  &.dim {
+    color: white;
+    background: #2782f2;
+
+    &:hover {
+      background: lighten(#2782f2, 15%);
+    }
+  }
 }
