--- a/packages/testbed/src/app/ui/prepost/prepost.component.html
+++ b/packages/testbed/src/app/ui/prepost/prepost.component.html
@@ -5,6 +5,12 @@
   <soundcraft-ui-mixer-button (press)="channel.pre()"
     >PRE</soundcraft-ui-mixer-button
   >
+  <soundcraft-ui-mixer-button
+    activeClass="post"
+    [active]="channel.post$ | async"
+    (press)="channel.togglePost()"
+    >Toggle PRE/POST</soundcraft-ui-mixer-button
+  >
 
   <span
     class="badge ml-2"
