fix(testbed): wrong method names

--- a/packages/testbed/src/app/pages/aux-bus/aux-bus.component.html
+++ b/packages/testbed/src/app/pages/aux-bus/aux-bus.component.html
@@ -12,10 +12,10 @@
 
   <!-- POST/PRE PROC -->
   <div>
-    <soundcraft-ui-mixer-button (press)="c.channel.preproc()">
+    <soundcraft-ui-mixer-button (press)="c.channel.preProc()">
       PRE PROC</soundcraft-ui-mixer-button
     >
-    <soundcraft-ui-mixer-button (press)="c.channel.postproc()"
+    <soundcraft-ui-mixer-button (press)="c.channel.postProc()"
       >POST PROC</soundcraft-ui-mixer-button
     >
   </div>
