--- a/packages/testbed/src/app/pages/player/player.component.html
+++ b/packages/testbed/src/app/pages/player/player.component.html
@@ -34,10 +34,10 @@
 </div>
 
 <div class="mb-3">
-  <soundcraft-ui-mixer-button (press)="player.manual()"
+  <soundcraft-ui-mixer-button (press)="player.setManual()"
     >Manual</soundcraft-ui-mixer-button
   >
-  <soundcraft-ui-mixer-button (press)="player.auto()"
+  <soundcraft-ui-mixer-button (press)="player.setAuto()"
     >Auto</soundcraft-ui-mixer-button
   >
   <soundcraft-ui-mixer-button (press)="player.setShuffle(0)"
