feat: add timed transitions for all channels
close #10

--- a/packages/testbed/src/app/pages/aux-bus/aux-bus.component.html
+++ b/packages/testbed/src/app/pages/aux-bus/aux-bus.component.html
@@ -22,4 +22,6 @@
 
   <soundcraft-ui-fader-level [channel]="c.channel"></soundcraft-ui-fader-level>
   <soundcraft-ui-pan [channel]="c.channel"></soundcraft-ui-pan>
+
+  <soundcraft-ui-transition [channel]="c.channel"></soundcraft-ui-transition>
 </ng-container>
