--- a/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
+++ b/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
@@ -6,4 +6,6 @@
   <soundcraft-ui-prepost [channel]="c.channel"></soundcraft-ui-prepost>
 
   <soundcraft-ui-fader-level [channel]="c.channel"></soundcraft-ui-fader-level>
+
+  <soundcraft-ui-transition [channel]="c.channel"></soundcraft-ui-transition>
 </ng-container>
