--- a/packages/testbed/src/app/pages/master-bus/master-bus.component.html
+++ b/packages/testbed/src/app/pages/master-bus/master-bus.component.html
@@ -7,4 +7,6 @@
 
   <soundcraft-ui-fader-level [channel]="c.channel"></soundcraft-ui-fader-level>
   <soundcraft-ui-pan *ngIf="!c.noPan" [channel]="c.channel"></soundcraft-ui-pan>
+
+  <soundcraft-ui-transition [channel]="c.channel"></soundcraft-ui-transition>
 </ng-container>
