--- a/packages/testbed/src/app/pages/master/master.component.html
+++ b/packages/testbed/src/app/pages/master/master.component.html
@@ -1,6 +1,8 @@
 <soundcraft-ui-fader-level [channel]="master"></soundcraft-ui-fader-level>
 <soundcraft-ui-pan [channel]="master"></soundcraft-ui-pan>
 
+<soundcraft-ui-transition [channel]="master"></soundcraft-ui-transition>
+
 <div>
   <soundcraft-ui-mixer-button
     activeClass="dim"
