feat: add relative fader level changes
close #9

--- a/packages/testbed/src/app/ui/fader-level/fader-level.component.html
+++ b/packages/testbed/src/app/ui/fader-level/fader-level.component.html
@@ -9,6 +9,19 @@
   #faderLevelInput
 />
 
+<button
+  class="btn btn-success btn-sm ml-3"
+  (click)="channel.changeFaderLevelDB(3)"
+>
+  + 3 dB
+</button>
+<button
+  class="btn btn-success btn-sm ml-3"
+  (click)="channel.changeFaderLevelDB(-3)"
+>
+  – 3 dB
+</button>
+
 <span class="badge badge-danger ml-3"
   >{{ channel.faderLevelDB$ | async }} dB</span
 >
