--- a/packages/testbed/src/app/ui/mixer-button/mixer-button.component.scss
+++ b/packages/testbed/src/app/ui/mixer-button/mixer-button.component.scss
@@ -13,6 +13,15 @@ button {
     background: lighten(black, 20%);
   }
 
+  &.default-active {
+    color: white;
+    background: rgb(211, 16, 107);
+
+    &:hover {
+      background: lighten(rgb(211, 16, 107), 20%);
+    }
+  }
+
   &.solo {
     color: black;
     background: yellow;
