feat: add volume control for SOLO and headphone bus
resolve #51

--- a/packages/testbed/src/app/pages/aux-bus/aux-bus.component.html
+++ b/packages/testbed/src/app/pages/aux-bus/aux-bus.component.html
@@ -1,6 +1,6 @@
 <div class="text-muted">
-  Note: Pan is only possible for stereo-linked AUX buses. Pan does not work on a
-  single mono AUX bus.
+  Note: Pan is only possible for stereo-linked AUX buses. Pan does not work on a single mono AUX
+  bus.
 </div>
 
 <ng-container *ngFor="let c of channels$ | async">
@@ -12,9 +12,7 @@
 
   <!-- POST/PRE PROC -->
   <div>
-    <soundcraft-ui-mixer-button (press)="c.channel.preProc()">
-      PRE PROC</soundcraft-ui-mixer-button
-    >
+    <soundcraft-ui-mixer-button (press)="c.channel.preProc()"> PRE PROC</soundcraft-ui-mixer-button>
     <soundcraft-ui-mixer-button (press)="c.channel.postProc()"
       >POST PROC</soundcraft-ui-mixer-button
     >
