--- a/packages/testbed/src/app/ui/pan/pan.component.html
+++ b/packages/testbed/src/app/ui/pan/pan.component.html
@@ -6,7 +6,7 @@
   step="0.00001"
   value="0.5"
   [value]="channel.pan$ | async"
-  (change)="channel.pan(panInput.value)"
+  (input)="channel.pan(panInput.value)"
   #panInput
 />
 
