--- a/packages/testbed/src/app/ui/solo-button/solo-button.component.html
+++ b/packages/testbed/src/app/ui/solo-button/solo-button.component.html
@@ -1,7 +1,7 @@
 <ng-container *ngIf="channel">
   <soundcraft-ui-mixer-button
     activeClass="solo"
-    [active]="channel.solo$ | async"
+    [active]="!!(channel.solo$ | async)"
     (press)="channel.toggleSolo()"
   >
     Solo toggle {{ label }}
