--- a/packages/testbed/src/app/ui/pan/pan.component.html
+++ b/packages/testbed/src/app/ui/pan/pan.component.html
@@ -1,13 +1,15 @@
-<label>Pan</label>
-<input
-  type="range"
-  min="0"
-  max="1"
-  step="0.00001"
-  value="0.5"
-  [value]="channel.pan$ | async"
-  (input)="channel.pan(panInput.value)"
-  #panInput
-/>
+<ng-container *ngIf="channel">
+  <label>Pan</label>
+  <input
+    type="range"
+    min="0"
+    max="1"
+    step="0.00001"
+    value="0.5"
+    [value]="channel.pan$ | async"
+    (input)="pan(panInput.value)"
+    #panInput
+  />
 
-<span class="badge badge-primary ml-3">{{ channel.pan$ | async }}</span>
+  <span class="badge badge-primary ms-3">{{ channel.pan$ | async }}</span>
+</ng-container>
