--- a/packages/testbed/src/app/ui/prepost/prepost.component.html
+++ b/packages/testbed/src/app/ui/prepost/prepost.component.html
@@ -1,20 +1,14 @@
 <ng-container *ngIf="channel">
-  <soundcraft-ui-mixer-button (press)="channel.post()">
-    POST</soundcraft-ui-mixer-button
-  >
-  <soundcraft-ui-mixer-button (press)="channel.pre()"
-    >PRE</soundcraft-ui-mixer-button
-  >
+  <soundcraft-ui-mixer-button (press)="channel.post()"> POST</soundcraft-ui-mixer-button>
+  <soundcraft-ui-mixer-button (press)="channel.pre()">PRE</soundcraft-ui-mixer-button>
   <soundcraft-ui-mixer-button
     activeClass="post"
-    [active]="channel.post$ | async"
+    [active]="!!(channel.post$ | async)"
     (press)="channel.togglePost()"
     >Toggle PRE/POST</soundcraft-ui-mixer-button
   >
 
-  <span
-    class="badge ml-2"
-    [ngClass]="{ 'badge-success': post, 'badge-secondary': !post }"
-    >{{ post ? 'POST' : 'PRE' }}</span
-  >
+  <span class="badge ms-2" [ngClass]="{ 'badge-success': post, 'badge-secondary': !post }">{{
+    post ? 'POST' : 'PRE'
+  }}</span>
 </ng-container>
