fix(testbed): style fixes

--- a/packages/testbed/src/app/ui/fader-level/fader-level.component.html
+++ b/packages/testbed/src/app/ui/fader-level/fader-level.component.html
@@ -17,6 +17,6 @@
     – 3 dB
   </button>
 
-  <span class="badge badge-danger ms-3">{{ channel.faderLevelDB$ | async }} dB</span>
-  <span class="badge badge-secondary ms-3">{{ channel.faderLevel$ | async }}</span>
+  <span class="ms-3">{{ channel.faderLevelDB$ | async }} dB</span>
+  <span class="ms-3">{{ channel.faderLevel$ | async }}</span>
 </ng-container>
