--- a/packages/testbed/src/app/ui/pan/pan.component.html
+++ b/packages/testbed/src/app/ui/pan/pan.component.html
@@ -11,5 +11,5 @@
     #panInput
   />
 
-  <span class="badge badge-primary ms-3">{{ channel.pan$ | async }}</span>
+  <span class="ms-3">{{ channel.pan$ | async }}</span>
 </ng-container>
