--- a/packages/testbed/src/app/ui/transition/transition.component.html
+++ b/packages/testbed/src/app/ui/transition/transition.component.html
@@ -14,7 +14,7 @@
     />
   </div>
   <div class="col">
-    <span class="badge badge-danger ms-3">{{ targetValueDB }} dB</span>
+    {{ targetValueDB }} dB
   </div>
 
   <div class="col">
