feat: return Promise for connection methods
The `connect`, `disconnect` and `reconnect` methods now return a Promise.
This allows us to wait for a connection before continuing with the
next operation. This should not be a breaking change: You can ignore
the promise if you're not interested in the result event.

--- a/packages/testbed/src/app/app.component.html
+++ b/packages/testbed/src/app/app.component.html
@@ -7,8 +7,8 @@
       <ng-container *ngIf="status$ | async as status">{{ status.type }}</ng-container>
 
       <span class="float-end">
-        <button class="btn btn-success btn-sm me-2" (click)="cs.conn.connect()">Connect</button>
-        <button class="btn btn-danger btn-sm" (click)="cs.conn.disconnect()">Disconnect</button>
+        <button class="btn btn-success btn-sm me-2" (click)="connect()">Connect</button>
+        <button class="btn btn-danger btn-sm" (click)="disconnect()">Disconnect</button>
       </span>
     </div>
     <div class="card-body">
