--- a/packages/testbed/src/app/pages/connection/connection.component.html
+++ b/packages/testbed/src/app/pages/connection/connection.component.html
@@ -2,7 +2,7 @@
 <button class="btn btn-warning mt-2" (click)="setIP(ipInput.value)">Set IP and connect</button>
 
 <div class="mt-3">
-  <button class="btn btn-success me-2" (click)="cs.conn.connect()">Connect</button>
-  <button class="btn btn-danger me-2" (click)="cs.conn.disconnect()">Disconnect</button>
-  <button class="btn btn-warning me-2" (click)="cs.conn.reconnect()">Reconnect</button>
+  <button class="btn btn-success me-2" (click)="connect()">Connect</button>
+  <button class="btn btn-danger me-2" (click)="disconnect()">Disconnect</button>
+  <button class="btn btn-warning me-2" (click)="reconnect()">Reconnect</button>
 </div>
