--- a/packages/testbed/src/app/pages/master-bus/master-bus.component.html
+++ b/packages/testbed/src/app/pages/master-bus/master-bus.component.html
@@ -9,4 +9,10 @@
   <soundcraft-ui-pan *ngIf="!c.noPan" [channel]="c.channel"></soundcraft-ui-pan>
 
   <soundcraft-ui-transition [channel]="c.channel"></soundcraft-ui-transition>
+
+  <soundcraft-ui-delay
+    *ngIf="isDelayable(c.channel)"
+    [channel]="c.channel"
+    [maxValue]="c.delayMax || 250"
+  ></soundcraft-ui-delay>
 </ng-container>
