feat: add support for relative delay changes

--- a/packages/testbed/src/app/ui/delay/delay.component.html
+++ b/packages/testbed/src/app/ui/delay/delay.component.html
@@ -10,5 +10,8 @@
     #delayInput
   />
 
+  <button class="btn btn-success btn-sm ms-3" (click)="changeDelay(50)">+ 50 ms</button>
+  <button class="btn btn-success btn-sm ms-3" (click)="changeDelay(-30)">- 30 ms</button>
+
   <span class="ms-3">{{ channel.delay$ | async }} ms</span>
 </ng-container>
