--- a/packages/testbed/src/app/pages/master/master.component.html
+++ b/packages/testbed/src/app/pages/master/master.component.html
@@ -18,31 +18,21 @@
 
 <div class="mt-4">
   <h2>Delay</h2>
-  <div class="mb-2">
-    <strong>L</strong>
+  <div class="mb-2" *ngFor="let d of delays">
+    <strong>{{ d.side }}</strong>
     <input
-      class="form-control w-25 d-inline ms-4 me-4"
-      type="number"
+      class="w-25 d-inline ms-4"
+      type="range"
       min="0"
       max="500"
-      step="10"
-      [value]="master.delayL$ | async"
-      (change)="master.setDelayL($any($event.target).value)"
+      step="1"
+      [value]="d.data$ | async"
+      (change)="d.setDelay($any($event.target).value)"
     />
-    {{ master.delayL$ | async }} ms
-  </div>
 
-  <div class="mb-2">
-    <strong>R</strong>
-    <input
-      class="form-control w-25 d-inline ms-4 me-4"
-      type="number"
-      min="0"
-      max="500"
-      step="10"
-      [value]="master.delayR$ | async"
-      (change)="master.setDelayR($any($event.target).value)"
-    />
-    {{ master.delayR$ | async }} ms
+    <button class="btn btn-success btn-sm ms-3" (click)="d.changeDelay(50)">+ 50 ms</button>
+    <button class="btn btn-success btn-sm ms-3 me-3" (click)="d.changeDelay(-30)">- 30 ms</button>
+
+    {{ d.data$ | async }} ms
   </div>
 </div>
