--- a/packages/testbed/src/app/pages/shows/shows.component.html
+++ b/packages/testbed/src/app/pages/shows/shows.component.html
@@ -1,3 +1,9 @@
+<div class="mb-5">
+  <p><label>Current show</label> {{ showCtrl.currentShow$ | async }}</p>
+  <p><label>Current snapshot</label> {{ showCtrl.currentSnapshot$ | async }}</p>
+  <p><label>Current cue</label> {{ showCtrl.currentCue$ | async }}</p>
+</div>
+
 <soundcraft-ui-input
   label="Load show"
   buttonLabel="Load show"
