--- a/packages/testbed/src/app/pages/connection/connection.component.html
+++ b/packages/testbed/src/app/pages/connection/connection.component.html
@@ -6,3 +6,7 @@
   <button class="btn btn-danger me-2" (click)="disconnect()">Disconnect</button>
   <button class="btn btn-warning me-2" (click)="reconnect()">Reconnect</button>
 </div>
+
+<div *ngIf="cs.conn.deviceInfo.model$ | async as model" class="mt-3">
+  <strong>Model: </strong> {{ model }}
+</div>
