--- a/packages/testbed/src/app/pages/master/master.component.html
+++ b/packages/testbed/src/app/pages/master/master.component.html
@@ -1,19 +1,19 @@
-<soundcraft-ui-fader-level [channel]="master"></soundcraft-ui-fader-level>
-<soundcraft-ui-pan [channel]="master"></soundcraft-ui-pan>
+<sui-fader-level [channel]="master" />
+<sui-pan [channel]="master" />
 
-<soundcraft-ui-transition [channel]="master"></soundcraft-ui-transition>
+<sui-transition [channel]="master" />
 
 <div>
-  <soundcraft-ui-mixer-button
+  <sui-mixer-button
     activeClass="dim"
     [active]="!!(master.dim$ | async)"
     (press)="master.toggleDim()"
   >
     DIM toggle
-  </soundcraft-ui-mixer-button>
+  </sui-mixer-button>
 
-  <soundcraft-ui-mixer-button (press)="master.dim()"> DIM on</soundcraft-ui-mixer-button>
-  <soundcraft-ui-mixer-button (press)="master.undim()">DIM off</soundcraft-ui-mixer-button>
+  <sui-mixer-button (press)="master.dim()">DIM on</sui-mixer-button>
+  <sui-mixer-button (press)="master.undim()">DIM off</sui-mixer-button>
 </div>
 
 <div class="mt-4">
