--- a/packages/testbed/src/app/pages/multitrack/multitrack.component.html
+++ b/packages/testbed/src/app/pages/multitrack/multitrack.component.html
@@ -10,25 +10,19 @@
 </div>
 
 <div class="mb-3">
-  <soundcraft-ui-mixer-button (press)="mtk.play()">PLAY</soundcraft-ui-mixer-button>
-  <soundcraft-ui-mixer-button (press)="mtk.pause()">PAUSE</soundcraft-ui-mixer-button>
-  <soundcraft-ui-mixer-button (press)="mtk.stop()">STOP</soundcraft-ui-mixer-button>
-  <soundcraft-ui-mixer-button (press)="mtk.recordToggle()" [active]="!!(mtk.recording$ | async)"
-    >REC</soundcraft-ui-mixer-button
-  >
+  <sui-mixer-button (press)="mtk.play()">PLAY</sui-mixer-button>
+  <sui-mixer-button (press)="mtk.pause()">PAUSE</sui-mixer-button>
+  <sui-mixer-button (press)="mtk.stop()">STOP</sui-mixer-button>
+  <sui-mixer-button (press)="mtk.recordToggle()" [active]="!!(mtk.recording$ | async)">
+    REC
+  </sui-mixer-button>
 </div>
 
 <div class="mb-3">
   <h2>Soundcheck</h2>
-  <soundcraft-ui-mixer-button (press)="mtk.activateSoundcheck()"
-    >Activate</soundcraft-ui-mixer-button
-  >
-  <soundcraft-ui-mixer-button (press)="mtk.deactivateSoundcheck()"
-    >Deactivate</soundcraft-ui-mixer-button
-  >
-  <soundcraft-ui-mixer-button
-    (press)="mtk.toggleSoundcheck()"
-    [active]="!!(mtk.soundcheck$ | async)"
-    >Toggle</soundcraft-ui-mixer-button
-  >
+  <sui-mixer-button (press)="mtk.activateSoundcheck()">Activate</sui-mixer-button>
+  <sui-mixer-button (press)="mtk.deactivateSoundcheck()">Deactivate</sui-mixer-button>
+  <sui-mixer-button (press)="mtk.toggleSoundcheck()" [active]="!!(mtk.soundcheck$ | async)">
+    Toggle
+  </sui-mixer-button>
 </div>
