--- a/packages/testbed/src/app/ui/solo-button/solo-button.component.html
+++ b/packages/testbed/src/app/ui/solo-button/solo-button.component.html
@@ -1,16 +1,12 @@
 <ng-container *ngIf="channel">
-  <soundcraft-ui-mixer-button
+  <sui-mixer-button
     activeClass="solo"
     [active]="!!(channel.solo$ | async)"
     (press)="channel.toggleSolo()"
   >
     Solo toggle {{ label }}
-  </soundcraft-ui-mixer-button>
+  </sui-mixer-button>
 
-  <soundcraft-ui-mixer-button (press)="channel.solo()">
-    Solo {{ label }}</soundcraft-ui-mixer-button
-  >
-  <soundcraft-ui-mixer-button (press)="channel.unsolo()"
-    >Unsolo {{ label }}</soundcraft-ui-mixer-button
-  >
+  <sui-mixer-button (press)="channel.solo()">Solo {{ label }}</sui-mixer-button>
+  <sui-mixer-button (press)="channel.unsolo()">Unsolo {{ label }}</sui-mixer-button>
 </ng-container>
