--- a/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
+++ b/packages/testbed/src/app/pages/fx-bus/fx-bus.component.html
@@ -1,11 +1,11 @@
 <ng-container *ngFor="let c of channels$ | async">
   <h2 class="mt-4">{{ c.label }} ({{ c.channel.name$ | async }})</h2>
 
-  <soundcraft-ui-mute-button [channel]="c.channel"></soundcraft-ui-mute-button>
+  <sui-mute-button [channel]="c.channel" />
 
-  <soundcraft-ui-prepost [channel]="c.channel"></soundcraft-ui-prepost>
+  <sui-prepost [channel]="c.channel" />
 
-  <soundcraft-ui-fader-level [channel]="c.channel"></soundcraft-ui-fader-level>
+  <sui-fader-level [channel]="c.channel" />
 
-  <soundcraft-ui-transition [channel]="c.channel"></soundcraft-ui-transition>
+  <sui-transition [channel]="c.channel" />
 </ng-container>
