--- a/packages/testbed/src/app/pages/master-bus/master-bus.component.html
+++ b/packages/testbed/src/app/pages/master-bus/master-bus.component.html
@@ -1,18 +1,14 @@
 <ng-container *ngFor="let c of channels">
   <h2 class="mt-4">{{ c.label }} ({{ c.channel.name$ | async }})</h2>
 
-  <soundcraft-ui-mute-button [channel]="c.channel"></soundcraft-ui-mute-button>
+  <sui-mute-button [channel]="c.channel" />
 
-  <soundcraft-ui-solo-button [channel]="c.channel"></soundcraft-ui-solo-button>
+  <sui-solo-button [channel]="c.channel" />
 
-  <soundcraft-ui-fader-level [channel]="c.channel"></soundcraft-ui-fader-level>
-  <soundcraft-ui-pan *ngIf="!c.noPan" [channel]="c.channel"></soundcraft-ui-pan>
+  <sui-fader-level [channel]="c.channel" />
+  <sui-pan *ngIf="!c.noPan" [channel]="c.channel" />
 
-  <soundcraft-ui-transition [channel]="c.channel"></soundcraft-ui-transition>
+  <sui-transition [channel]="c.channel" />
 
-  <soundcraft-ui-delay
-    *ngIf="isDelayable(c.channel)"
-    [channel]="c.channel"
-    [maxValue]="c.delayMax || 250"
-  ></soundcraft-ui-delay>
+  <sui-delay *ngIf="isDelayable(c.channel)" [channel]="c.channel" [maxValue]="c.delayMax || 250" />
 </ng-container>
