--- a/packages/testbed/src/app/ui/mute-button/mute-button.component.html
+++ b/packages/testbed/src/app/ui/mute-button/mute-button.component.html
@@ -1,16 +1,12 @@
 <ng-container *ngIf="channel">
-  <soundcraft-ui-mixer-button
+  <sui-mixer-button
     activeClass="mute"
     [active]="!!(channel.mute$ | async)"
     (press)="channel.toggleMute()"
   >
     Mute toggle {{ label }}
-  </soundcraft-ui-mixer-button>
+  </sui-mixer-button>
 
-  <soundcraft-ui-mixer-button (press)="channel.mute()">
-    Mute {{ label }}</soundcraft-ui-mixer-button
-  >
-  <soundcraft-ui-mixer-button (press)="channel.unmute()"
-    >Unmute {{ label }}</soundcraft-ui-mixer-button
-  >
+  <sui-mixer-button (press)="channel.mute()">Mute {{ label }}</sui-mixer-button>
+  <sui-mixer-button (press)="channel.unmute()">Unmute {{ label }}</sui-mixer-button>
 </ng-container>
